<resources>
    <string name="app_name">Диктатор</string>
    <string name="results_hint">Результат</string>
    <string name="voice_volume_hint">Громкость голоса</string>
    <string name="current_state_hint">Состояние</string>
    <string name="start_btn">Старт</string>
    <string name="pause_btn">Пауза</string>
    <string name="pause_btn_on">Продолжить</string>


    <!-- dialog save -->
    <string name="save_dialog_title">Сохранить лекцию</string>
    <string name="save_dialog_field_title">Название лекции</string>
    <string name="save_dialog_field_author">Автор</string>
    <string name="save_dialog_dismiss_btn">Отмена</string>
    <string name="save_dialog_save_btn">Сохранить</string>
    <string name="lectures_title">Все лекции</string>

    <string name="transition_designer_news_login" translatable="false">transition_designer_news_login</string>
</resources>
