<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/SampleFragmentStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/voice_volume_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voice_volume_hint"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/voice_power_bar"
        style="@style/VoiceVolumeStyle"
        android:layout_width="match_parent"
        android:layout_marginEnd="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_volume_hint"
        android:max="100"
        android:progress="0" />

    <TextView
        android:id="@+id/result_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_power_bar"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:text="@string/results_hint"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_hint"
        android:gravity="start"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/current_state_hint"
            style="@style/CurrentStateHintStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:text="@string/current_state_hint" />

        <TextView
            android:id="@+id/current_state"
            style="@style/CurrentStateTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_holder"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/pause_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/pause_btn" />

            <Button
                android:id="@+id/start_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_btn" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/fab"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:elevation="@dimen/z_fab"
        android:background="@drawable/fab"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/padding_normal"
        android:stateListAnimator="@animator/raise"
        android:src="@drawable/ic_cloud_upload_black_24dp" />



</RelativeLayout>